[tool.poetry]
name = "promptstability"
version = "0.1.47"
description = "Package for generating Prompt Stability Score (PSS). PSS estimates the stability of outcomes resulting from variations in language model prompt specifications."
authors = ["Christopher Barrie, Elli Palaiologou, Petter Törnberg"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/palaiole13/promptstability"
repository = "https://github.com/palaiole13/promptstability"
documentation = "https://github.com/palaiole13/promptstability"
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
include = ["promptstability/data/example_data.csv"]

[tool.poetry.dependencies]
python = ">=3.8,<=3.13"
transformers = "^4.0.0" 
sentence-transformers = ">=2.2.0,<3.0.0" 
simpledorff = "*"
pandas = "*"  # Specify a version if known; adjust as necessary
numpy = "*"   # Specify a version if known; adjust as necessary
matplotlib = "*"
seaborn = "*"  # Specify a version if known; adjust as necessary
openai = "*"
sentencepiece = "^0.2.0"
torch = ">=1.11.0,<2.0.0"  # Specify a version range

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
