[tool.poetry]
name = "promptstability"
version = "0.1.4"
description = "Package for generating Prompt Stability Score (PSS). PSS estimates the stability of outcomes resulting from variations in language model prompt specifications."
authors = ["Christopher Barrie, Elli Palaiologou, Petter Törnberg"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/palaiole13/promptstability"
repository = "https://github.com/palaiole13/promptstability"
documentation = "https://github.com/palaiole13/promptstability"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
include = ["promptstability/data/example_data.csv"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
simpledorff = "0.0.2"
pandas = "^1.5.3"
numpy = "^1.22.0"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
openai = "^1.63.0"
sentencepiece = "^0.1.99"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
